--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,7 @@
+* {
+  font-family: '맑은 고딕, MS Gothic';
+}
+
 body, head {
   margin: 0px;
   padding: 0px;
@@ -5,7 +9,9 @@ body, head {
   width: 100%;
   height: 100%;
 }
-  
+
+/* Old Login Page */
+
 .centerBox {
   margin: 10vh auto;
 }
@@ -18,4 +24,77 @@ body, head {
     top: 50%;
     transform: translate(-50%, -50%);
   }
+}
+
+/* New Website */
+#topbar {
+  background-color: #83bfff;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  overflow: hidden;
+}
+
+#topbar li {
+  float: left;
+  color: white;
+}
+
+#topbar li .topbar-item {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  margin: 0;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+#topbar li .topbar-item:hover {
+  background-color: #111;
+  transition: .3s
+}
+
+#topbar li h3 {
+  margin: 0;
+  padding: 0;
+}
+
+#topbar_account {
+  float: right!important;
+}
+
+#topbar_account_login {
+  cursor: pointer;
+  padding: 14px 16px;
+  margin: 0;
+  display: block;
+  text-decoration: none;
+  color: black;
+}
+
+#topbar_account_login:hover {
+  background-color: #ddd;
+  transition: .3s
+}
+
+.nav-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  right: 0;
+  margin: 10px;
+}
+
+.nav-dropdown-show {
+  display: block;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  /* transition: 0.3s; */
+  display: block
 }
