--- a/page/_tail.ejs
+++ b/page/_tail.ejs
@@ -1,3 +1,7 @@
+  <footer>
+    Teaddy @ <a href="https://twitch.tv/withmingyu">트위치</a> / <a href="https://tgd.kr/withmingyu">트게더</a> / <a href="https://youtube.com/channel/">유튜브(링크 추가 필요)</a> / <a href="https://discord.gg/mpAJ3wS">디스코드</a><br>
+    Copyright &copy; 2020 Teaddy Studio Team.
+  </footer>
   <script src="/src/js/topbar.js"></script>
 </body>
 </html>
