--- a/page/login.ejs
+++ b/page/login.ejs
@@ -1,74 +1,15 @@
-<!doctype html>
-<html lang="ko">
-  <head>
-    <title>Neptune - Login</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<%- include('./_head.ejs', { id: null, page: 'login' }) %>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/1213a7cbad.js" crossorigin="anonymous"></script>
+<main>
+  <h2 class="title">로그인</h2>
+  <form id="login-form">
+    <label for="username">사용자 이름</label>
+    <input type="text" name="username" placeholder="사용자 이름 입력" required>
+    <label for="password">패스워드</label>
+    <a href="/forgot_password" id="login-pwforgot">패스워드가 기억나지 않나요?</a>
+    <input type="password" name="password" placeholder="패스워드 입력" required>
+    <button type="submit">로그인</button> 혹은 <a href="/register">가입하기</a>
+  </form>
+</main>
 
-    <% if (key) { %>
-      <script src="https://apis.google.com/js/platform.js" async defer></script>
-      <meta name="google-signin-client_id" content="764267679880-4iclc2tdan62fnic4nr2vpi6cfot6jfh.apps.googleusercontent.com">
-    <% } %>
-
-    <link rel="stylesheet" href="/src/css/login.css">
-    <link rel="stylesheet" href="/src/css/main.css">
-  </head>
-  <body>
-    <div class="login-outline centerBox">
-      <div class="login-title text-center">인증과정</div>
-      <hr width="80px" />
-      <div class="login-progress row">
-        <div class="col-sm-4 login-cards login-discord">
-          <div class="card">
-            <h5 class="card-header">1. 디스코드 로그인</h5>
-            <div class="card-body">
-              <div class="card-title"><i class="fab fa-discord"></i></div>
-              <% if(!key[0]) {%>
-              <p class="card-text">디스코드 유저 식별을 위해 디스코드 로그인이 필요합니다</p>
-              <a href="<%= authUrl %>" class="btn btn-discord"><i class="fab fa-discord"></i> Login</a>
-              <% } else { %>
-              <div class="card-text"><b><%= discordData.username %>#<%= discordData.discriminator %></b>으로 로그인되어 있어요. <a href="<%= authUrl %>">당신이 아닌가요?</a></div>
-              <% } %>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 <%= !key[0] ? 'login-disable' : '' %> login-cards login-google">
-          <div class="card">
-            <h5 class="card-header">2. 구글 로그인</h5>
-            <div class="card-body">
-              <div class="card-title"><i class="fab fa-google"></i></div>
-              <% if(!key[1]) { %>
-              <p class="card-text">유저 인증을 위해 구글 계정 로그인이 필요합니다</p>
-              <div class="g-signin2" data-onsuccess="onSignIn"></div>
-              <% } else { %>
-              <p class="card-text"><b><%= authData[key[0]].google.email %></b>으로 로그인되어 있어요. <a href="javascript:void(0)" onclick="googleSignOut()">당신이 아닌가요?</a></p>
-              <% } %>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4 <%= !key[1] ? 'login-disable' : '' %> login-cards login-finish">
-          <div class="card">
-            <h5 class="card-header">3. 인증 완료</h5>
-            <div class="card-body">
-              <div class="card-title"><i class="fas fa-arrow-alt-circle-right"></i></div>
-              <p class="card-text">인증 과정을 저장하고 서버에 적용합니다</p>
-              <a href="javascript:void(0)" class="btn btn-primary" onclick="submit()"><i class="fas fa-arrow-alt-circle-right"></i> 적용!</a>
-            </div>
-          </div>
-      </div>
-    </div>
-    <script src="/src/js/login.js"></script>
-    <script src="https://apis.google.com/js/platform.js?onload=onGoogleLoad" async defer></script>
-  </body>
-</html>
+<%- include('./_tail.ejs') %>
