--- a/page/_head.ejs
+++ b/page/_head.ejs
@@ -13,9 +13,8 @@
   <nav>
     <ul id="topbar">
       <li>
-        <a href="#" class="topbar-item"><h3>Teaddy</h3></a>
+        <a href="/" class="topbar-item"><h3>Teaddy</h3></a>
       </li>
-      <li><a href="#" class="topbar-item">홈</a></li>
       <li id="topbar_account">
         <span id="topbar_account_item" class="topbar-item nav-dropdown-keep-show">계정</span>
         <div id="topbar_account_content" class="nav-dropdown-content nav-dropdown-keep-show">
