alright, here goes the register system

--- a/page/_head.ejs
+++ b/page/_head.ejs
@@ -6,7 +6,9 @@
   <title>Teaddy</title>
   <link rel="stylesheet" href="/src/css/main.css">
   <% if(page === 'login') { %><link rel="stylesheet" href="/src/css/login.css"><% } %>
-  <% if(page === 'register') { %><link rel="stylesheet" href="/src/css/step.css"><% } %>
+  <% if(page === 'register') { %>
+  <link rel="stylesheet" href="/src/css/step.css">
+  <% } %>
 </head>
 <body>
   <!-- header -->
