--- a/page/register.ejs
+++ b/page/register.ejs
@@ -12,18 +12,18 @@
     <li class="<% if(step === 3) { %>active<% } else if(step > 3 && step <= 4) { %>completed<% } %>">
       <div class="progress-text">계정 정보 입력</div>
     </li>
-    <li>
+    <li class="<% if(step === 4) { %>active<% } %>">
       <div class="progress-text">가입 완료!</div>
     </li>
   </ul>
 </div>
 <main>
   <% if(step < 2 || step > 4) { %>
-  <form method="post">
-    <label for="agree-all" class="right">아래 내용을 읽어보았으며 모두 동의합니다.</label>
+  <form method="post" onsubmit="return regStep1()">
+    <label for="agree-all" class="right">아래 내용을 모두 읽었으며 이에 동의합니다.</label>
     <input type="checkbox" id="agree-all" class="right">
     <br><br>
-    <label>이용 약관</label>
+    <label>이용약관</label>
     <label for="tos-agree" class="right">이용약관에 동의합니다.</label>
     <input type="checkbox" name="tos" id="tos-agree" class="right">
 
@@ -54,13 +54,23 @@
     <input type="text" name="uname" id="uname" placeholder="새로 가입할 사용자 이름 입력" required>
     <label for="pw">패스워드</label>
     <input type="password" name="password" id="pw" placeholder="패스워드 입력" required>
+    <div id="password-rule">
+      <ul>
+        <li>영어 대소문자, 숫자, 특수문자 모두 포함</li>
+        <li>8글자 이상</li>
+      </ul>
+    </div>
     <label for="pwchk">패스워드 확인</label>
     <input type="password" id="pwchk" placeholder="패스워드 다시 입력" required>
-    <button type="submit">가입하기!</button>
+    <button type="submit" onsubmit="return regStep3()">가입하기!</button>
   </form>
   <% } else if(step === 4) { %>
+  <h3>가입 완료!</h3>
+  <p>가입이 완료되었습니다!</p>
+  <a href="/" class="btn">메인으로 가기</a>
   <% } %>
 </main>
 </div>
+<script src="/src/js/register.js"></script>
 
 <%- include('./_tail.ejs') %>
