--- a/src/css/main.css
+++ b/src/css/main.css
@@ -106,7 +106,6 @@ body, head {
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  /* transition: 0.3s; */
   display: block;
   padding: 8px 14px;
 }
@@ -141,6 +140,17 @@ input[type=text], input[type=password], textarea {
   border: 2px solid #000;
   box-sizing: border-box;
   font-family: inherit;
+  transition: border-color,background-color .5s
+}
+
+input[type=text].error, input[type=password].error {
+  background-color: #fed0d0;
+  border-color: #f00;
+}
+
+input[type=text].success, input[type=password].success {
+  background-color: #d0fed0;
+  border-color: #0f0;
 }
 
 /* Disable custom font */
@@ -160,6 +170,9 @@ button, .btn {
   font-size: 16px;
   font-family: inherit;
   text-decoration: none;
+}
+button:disabled, .btn:disabled {
+  background-color: grey;
 }
 
 /* Link style */
