--- a/page/login.ejs
+++ b/page/login.ejs
@@ -3,7 +3,7 @@
 <div class="card responsive">
 <h2 class="title">로그인</h2>
 <main>
-  <form id="login-form">
+  <form method="post" id="login-form">
     <label for="username">사용자 이름</label>
     <input type="text" name="username" placeholder="사용자 이름 입력" required>
     <label for="password">패스워드</label>
