--- a/src/css/main.css
+++ b/src/css/main.css
@@ -88,6 +88,7 @@ body, head {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
+  color: black;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
